<resources>
    <!--non translatable strings-->
    <string name="app_name" translatable="false">Mediateka</string>
    <string name="transition_cinema_poster_image" translatable="false">transition_cinema_poster_image</string>
    <string name="transition_actor_avatar" translatable="false">transition_actor_avatar</string>
    <string name="pref_key_background_image_quality_type" translatable="false">pref_key_background_image_quality_type</string>
    <string name="pref_key_play_sound_on_notification" translatable="false">pref_key_play_sound_on_notification</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Нотификации</string>
    <string name="actual_cinemas">Актуальные фильмы</string>
    <string name="by_rating">По оценкам</string>
    <string name="coming_soon">Скоро</string>
    <string name="message_more_info">Подробнее</string>
    <string name="dollar_char">$%s</string>
    <string name="message_retry">Повторить</string>
    <string name="nav_open">Navigation drawer open</string>
    <string name="nav_close">Navigation drawer close</string>
    <string name="message_info">Информация</string>
    <string name="actors">Актеры</string>
    <string name="revenue">Сборы:</string>
    <string name="budget">Бюджет:</string>
    <string name="directed_by">Режиссёр:</string>
    <string name="release_date">Дата премьеры:</string>
    <string name="message_cinemas">Фильмы</string>
    <string name="biography">Биография</string>
    <string name="date_of_birth">Дата рождения: </string>
    <string name="birthplace">Место рождения: </string >
    <string name="age">Возраст: </string>
    <string name="message_biography_not_entered">К сожалению , для этого актера биография не была введена.</string>
    <string name="message_cinema_desc_not_entered">К сожалению, обзор фильма не был предоставлен.</string>
    <string name="cinemas">Фильмы</string>
    <string name="cinemas_count">Фильмов: %d</string>
    <string name="settings">Настройки</string>
    <string name="popular_actors">Популярные люди</string>
    <string name="years">%s лет</string>
    <string name="search">Поиск</string>
    <string name="role">в роли %s</string>
    <string name="advanced_search">Улучшенный поиск</string>
    <string name="schedules">Напоминания</string>
    <string name="message_network_error">Чтобы синхронизировать данные , подкюлчитесь к интернету</string>
    <string name="search_cinemas">Поиск фильмов…</string>
    <string name="search_actors">Поиск актёров…</string>
    <string name="genre_action">боевик</string>
    <string name="genre_adventure">приключение</string>
    <string name="genre_cartoon">мультфильм</string>
    <string name="genre_comedy">комедия</string>
    <string name="genre_crime">криминал</string>
    <string name="genre_documentary">документальный</string>
    <string name="genre_drama">драма</string>
    <string name="genre_family">семейный</string>
    <string name="genre_western">вестерн</string>
    <string name="genre_war">военный</string>
    <string name="genre_thriller">триллер</string>
    <string name="genre_tv_show">телевизионный фильм</string>
    <string name="genre_fantasy">фантастика</string>
    <string name="genre_music">музыка</string>
    <string name="genre_horror">ужасы</string>
    <string name="genre_history">история</string>
    <string name="genre_science_fiction">фантастика</string>
    <string name="genre_melodrama">мелодрама</string>
    <string name="genre_detective">детектив</string>
    <string name="add_to_favourites">Добавить в избранное</string>
    <string name="favourites_cinema">Избранные фильмы</string>
    <string name="message_added_to_favourite_list_cinema">Добавлен в избранное</string>
    <string name="undo">Отмена</string>
    <string name="message_removed_cinema">%s успешно удален.</string>
    <string name="delete">Удалить</string>
    <string name="duration">%dч %d мин</string>
    <string name="message_clear_favourite_list">Очистить избранные фильмы</string>
    <string name="message_successfully_favourite_cinema_list_cleared">Изрбранные фильмы успешно удалены.</string>
    <string name="message_see_list">Посмотреть</string>
    <string name="show_on_tmdb">Посмотреть на Tmdb</string>
    <string name="share_via">Поделиться</string>
    <string name="message_unknown_error">Произошла неизвестная ошибка</string>
    <string name="sort_favourite_list">Сортировать изрбранные фильмы</string>
    <string name="message_successfully_cinema_added_to_scheduled">Добавлено в заплонированные фильмы</string>
    <string name="message_incorrect_time_error">Вы выбрали не корректное время , попробуйте ещё раз</string>
    <string name="settings_general">Общие</string>
    <string name="choose_quality">Выберите качество</string>
    <string name="background_poster_image_quality">Качество фоновых изображений</string>
    <string name="about_app">Mediateka показывает самую последнюю информацию про фильмы и актеров</string>
    <string name="message_empty_favourite_cinema_list">Лист изрбранных фильмов пуст…</string>
    <string name="how_to_show_cinema_list">How to show cinema list</string>
    <string name="play_sound_when_notification_come">Воспроизводить звук когда придет уведомление</string>
    <string name="message_picture_download_successully">Картинка загрузилась успешно</string>
</resources>
